--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Second Ripo</title>
 </head>
 <body>
-    
+    <h1>I can push code</h1>
+    <h2>I can push code on github</h2>
 </body>
 </html>
